[gd_scene load_steps=2 format=3 uid="uid://yigbqw5lk6bo"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_nkgqx"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_nkgqx")

[node name="Label3" type="Label" parent="."]
offset_left = 258.0
offset_top = 504.0
offset_right = 928.0
offset_bottom = 617.0
theme_override_font_sizes/font_size = 30

[node name="Button" type="Button" parent="."]
offset_left = 116.0
offset_top = 246.0
offset_right = 1038.0
offset_bottom = 432.0
theme_override_font_sizes/font_size = 30
text = "Sign Up"

[node name="Button2" type="Button" parent="."]
offset_left = 126.0
offset_top = 684.0
offset_right = 1072.0
offset_bottom = 890.0
theme_override_font_sizes/font_size = 30
text = "Login"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
